# claude-plugins

plugins/orchestrator/: .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  pyproject.toml  tsconfig.json
plugins/orchestrator/.claude-plugin/: plugin.json
plugins/orchestrator/agents/: context-warden.md  memory-concierge.md  orchestrator-reflect.md  prime-agent.md
plugins/orchestrator/commands/: knowledge.md  orchestrator-init.md  reflect.md  status.md
plugins/orchestrator/docs/: 2026-07-11-flap-storm-fix-design.md  2026-07-12-warden-lifecycle-management-design.md  2026-07-13-egress-death-detection-design.md  2026-07-13-ingress-death-detection-design.md  2026-07-13-pa-coherence-primitive-design.md  ARCHITECTURE.md  DECISIONS.md  DESIGN-PRINCIPLES.md  README.md  agent-getting-started.md
plugins/orchestrator/docs/plans/: 2026-04-28-r6-cross-session-messaging.md  2026-05-13-launcher-python-canonical-design.md  2026-05-13-launcher-python-canonical-plan.md
plugins/orchestrator/hooks/: _lib.sh  hooks.json  post-tool-use  post-tool-use-failure  pre-compact  pre-tool-use  run-hook.cmd  session-start  stop  subagent-stop  user-prompt-submit
plugins/orchestrator/mcp/: server.ts  types.ts  utils.ts
plugins/orchestrator/mcp/db/: connection.ts  schema.ts
plugins/orchestrator/mcp/engine/: addressing.ts  agent_channel.ts  agent_channel_filter.ts  (+14 more)
plugins/orchestrator/scripts/: postinstall.sh  run-server.sh  start-server.sh
plugins/orchestrator/sidecar/: embed_server.py  requirements.txt
plugins/orchestrator/tests/: dist-freshness.test.ts  utils.test.ts
(+141 files in other folders)
